--- a/charts/mongodb/templates/deployment.yaml
+++ b/charts/mongodb/templates/deployment.yaml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: {{ template "mongodb.fullname" . }}
+      annotations:
+        createdby: smo
     spec:
       containers:
       - name: {{ template "mongodb.fullname" . }}
