--- a/charts/mongodb/templates/deployment.yaml
+++ b/charts/mongodb/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
         app: {{ template "mongodb.fullname" . }}
       annotations:
         createdby: smo
+        addedby: smo
     spec:
       containers:
       - name: {{ template "mongodb.fullname" . }}
